# ai_coder

./: README.md  pyproject.toml
src/ai_coder/: api_server.py  crew.py  main.py
src/ai_coder/config/: agents.yaml  tasks.yaml
src/ai_coder/tools/: custom_tool.py
tests/: test_api.py  test_crew.py
