[project]
name = "ai_coder"
version = "0.1.0"
description = "ai_coder using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.7.2",
    "litellm",
    "fastapi",
    "uvicorn[standard]"
]

[project.scripts]
ai_coder = "ai_coder.main:run"
run_crew = "ai_coder.main:run"
train = "ai_coder.main:train"
replay = "ai_coder.main:replay"
test = "ai_coder.main:test"
run_with_trigger = "ai_coder.main:run_with_trigger"
api_server = "ai_coder.api_server:start_server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
